added new images

--- a/shoes.html
+++ b/shoes.html
@@ -93,7 +93,7 @@
 
     <section  id="feature"  class="section-p1">
 
-        <div class="fe-box"  >
+        <div class="fe-box" onclick="window.location.href='shoes.html';" >
         <img src="img/products/shoe1.jpg">
         <h6><a href="shoes.html"> shoes </a></h6>
         </div>
