--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
 
 
                 <div class="pro">
-                    <img src="img/products/f5.jpg" alt="">
+                    <img src="img/products/sneaker1.jpg" alt="">
                     <div class="des">
                        <span>adidas</span>
                        <h5>Cartoon T shirt</h5> 
@@ -456,7 +456,7 @@
 
 
                 <div class="pro">
-                    <img src="img/products/f1.jpg" alt="">
+                    <img src="img/products/shoe5.jpg" alt="">
                     <div class="des">
                        <span>adidas</span>
                        <h5>Cartoon T shirt</h5> 
@@ -514,9 +514,9 @@
 
     <div class="pro-container">
             <div class="pro">
-                <img src="img/products/n1.jpg" alt="">
+                <img src="img/products/sneaker2.jpg" alt="">
                 <div class="des">
-                   <span>adidas</span>
+                   <span>Vans</span>
                    <h5>Cartoon T shirt</h5> 
                    
                    <h4>$75</h4>
@@ -528,7 +528,7 @@
 
             
             <div class="pro">
-                <img src="img/products/n2.jpg" alt="">
+                <img src="img/products/suit3.jpg" alt="">
                 <div class="des">
                    <span>adidas</span>
                    <h5>Cartoon T shirt</h5> 
@@ -541,7 +541,7 @@
             </div>
 
             <div class="pro">
-                <img src="img/products/n3.jpg" alt="">
+                <img src="img/products/suit1.jpg" alt="">
                 <div class="des">
                    <span>adidas</span>
                    <h5>Cartoon T shirt</h5> 
@@ -554,7 +554,7 @@
             </div>
 
             <div class="pro">
-                <img src="img/products/n4.jpg" alt="">
+                <img src="img/products/jacket2.jpg" alt="">
                 <div class="des">
                    <span>adidas</span>
                    <h5>Cartoon T shirt</h5> 
@@ -582,7 +582,7 @@
 
 
             <div class="pro">
-                <img src="img/products/n6.jpg" alt="">
+                <img src="img/products/travel1.jpg" alt="">
                 <div class="des">
                    <span>adidas</span>
                    <h5>Cartoon T shirt</h5> 
