--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <div>
 <ul id="nav-bar">
     <li><a class="active" href="index.html">Home</a></li>
-    <li><a href="shop.html">Shop</a></li>
+    <li><a href="shoes.html">Shop</a></li>
     <li><a href="blog.html">Blog</a></li>
     <li><a href="about.html">About </a></li>
     <li><a href="contact.html">Contact</a></li>
