--- a/watches.html
+++ b/watches.html
@@ -49,7 +49,7 @@
 <div>
 <ul id="nav-bar">
     <li><a  href="index.html">Home</a></li>
-    <li><a class="active" href="shop.html">Shop</a></li>
+    <li><a class="active" href="shoes.html">Shop</a></li>
     <li><a href="blog.html">Blog</a></li>
     <li><a href="about.html">About </a></li>
     <li><a href="contact.html">Contact</a></li>
@@ -77,7 +77,7 @@
 
 
 
-<section id="page-header">
+<section id="page-header-watches">
 
 
     
