--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <ul id="nav-bar">
     <li><a class="active" href="index.html">Home</a></li>
     <li><a href="shoes.html">Shop</a></li>
-    <li><a href="blog.html">Blog</a></li>
+    <li><a href="shoe2.html">Blog</a></li>
     <li><a href="about.html">About </a></li>
     <li><a href="contact.html">Contact</a></li>
     <li id="lg-bag"><a href="cart.html">   <i class="fas fa-shopping-bag"></i>  </a></li>
